--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap-range-slider": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-numeric-input": "^2.2.3",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
